// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserMenu > renders a button 1`] = `
<div>
  <div
    class="UserMenu-module_wrapper"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="UserMenu-module_triggerButton"
      data-state="closed"
      id="radix-react-use-id-1"
      type="button"
    >
      <div
        class="UserMenu-module_avatarWrapper"
      >
        <span
          aria-label="@person-name:homeserver.com"
          class="_avatar_va14e_8"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 36px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="36px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/element.png"
            width="36px"
          />
        </span>
      </div>
    </button>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
    >
      Sally Sanderson
    </span>
  </div>
</div>
`;

exports[`UserMenu > renders a button with a longer name 1`] = `
<div>
  <div
    class="UserMenu-module_wrapper"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="UserMenu-module_triggerButton"
      data-state="closed"
      id="radix-react-use-id-1"
      type="button"
    >
      <div
        class="UserMenu-module_avatarWrapper"
      >
        <span
          aria-label="@person-name:homeserver.com"
          class="_avatar_va14e_8"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 36px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="36px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/element.png"
            width="36px"
          />
        </span>
      </div>
    </button>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
    >
      Sally Sanderson with a longer name
    </span>
  </div>
</div>
`;

exports[`UserMenu > renders a guest menu 1`] = `
<body>
  
  


  <div>
    <div
      class="UserMenu-module_wrapper"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="User menu"
        class="UserMenu-module_triggerButton"
        data-state="closed"
        id="radix-react-use-id-1"
        type="button"
      >
        <div
          class="UserMenu-module_avatarWrapper"
        >
          <span
            aria-label="@guest:attendees.example.org"
            class="_avatar_va14e_8"
            data-color="4"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 36px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="36px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/element.png"
              width="36px"
            />
          </span>
        </div>
      </button>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
      >
        Guest
      </span>
    </div>
  </div>
</body>
`;

exports[`UserMenu > renders a menu 1`] = `
<body>
  
  


  <div>
    <div
      class="UserMenu-module_wrapper"
    >
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="User menu"
        class="UserMenu-module_triggerButton"
        data-state="closed"
        id="radix-react-use-id-1"
        type="button"
      >
        <div
          class="UserMenu-module_avatarWrapper"
        >
          <span
            aria-label="@person-name:homeserver.com"
            class="_avatar_va14e_8"
            data-color="1"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 36px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="36px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/element.png"
              width="36px"
            />
          </span>
        </div>
      </button>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
      >
        Sally Sanderson
      </span>
    </div>
  </div>
</body>
`;

exports[`UserMenu > renders a menu without an avatar 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  
  


  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="UserMenu-module_wrapper"
    >
      <button
        aria-controls="radix-react-use-id-1"
        aria-expanded="true"
        aria-haspopup="menu"
        aria-label="User menu"
        class="UserMenu-module_triggerButton"
        data-state="open"
        id="radix-react-use-id-2"
        type="button"
      >
        <div
          class="UserMenu-module_avatarWrapper"
        >
          <span
            aria-label="@person-name:homeserver.com"
            class="_avatar_va14e_8"
            data-color="1"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 36px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="36px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/element.png"
              width="36px"
            />
          </span>
        </div>
      </button>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
      >
        Sally Sanderson
      </span>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, -200%); min-width: max-content; --radix-popper-transform-origin: ; z-index: auto;"
  >
    <div
      aria-label="User menu"
      aria-labelledby="radix-react-use-id-2"
      aria-orientation="vertical"
      class="UserMenu-module_container _menu_1kl3y_8"
      data-align="start"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="right"
      data-state="open"
      dir="ltr"
      id="radix-react-use-id-1"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); animation: auto ease 0s 1 normal none running none; pointer-events: auto;"
      tabindex="-1"
    >
      <section
        class="UserMenu-module_profile"
      >
        <span
          class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 UserMenu-module_displayname"
        >
          Sally Sanderson
        </span>
        <span
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50"
          data-testid="userId"
        >
          @person-name:homeserver.com
        </span>
        <a
          class="_button_1nw83_8 _has-icon_1nw83_60"
          data-kind="tertiary"
          data-size="md"
          href="#"
          role="link"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 3h6a1 1 0 1 1 0 2H5v14h14v-6a1 1 0 1 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2"
            />
            <path
              d="M15 3h5a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0V6.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L17.586 5H15a1 1 0 1 1 0-2"
            />
          </svg>
          Manage account
        </a>
      </section>
      <div
        class="_separator_13qwf_8"
        data-kind="primary"
        data-orientation="horizontal"
        role="separator"
      />
      <section
        class="UserMenu-module_actions"
      >
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            Link new device
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zm0-2h12V10H6zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            Security & Privacy
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.713 16.713A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16q0-.424.287-.713A.97.97 0 0 1 12 15q.424 0 .713.287.287.288.287.713 0 .424-.287.712m0-3.999A.97.97 0 0 1 12 13a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 12V8q0-.424.287-.713A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8v4q0 .424-.287.713"
            />
            <path
              d="M2.95 16.3a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1zm4.2 2.8a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712l-.95 3.2z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            Feedback
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0m-2 0a2 2 0 1 0-4 0 2 2 0 0 0 4 0"
            />
            <path
              d="M11.312 2h1.376A2.31 2.31 0 0 1 15 4.312v.247l.002.003c.01.014.031.033.064.047.03.013.056.013.07.01h.002l.177-.177a2.31 2.31 0 0 1 3.27 0l.973.974a2.31 2.31 0 0 1 0 3.269l-.177.177v.003a.13.13 0 0 0 .01.07.15.15 0 0 0 .047.063l.003.002h.247A2.31 2.31 0 0 1 22 11.312v1.376A2.31 2.31 0 0 1 19.688 15h-.247l-.003.002a.15.15 0 0 0-.047.064.13.13 0 0 0-.01.07v.002l.177.177a2.31 2.31 0 0 1 0 3.27l-.974.973a2.31 2.31 0 0 1-3.269 0l-.177-.177h-.003a.13.13 0 0 0-.07.01.15.15 0 0 0-.063.047l-.002.003v.247A2.31 2.31 0 0 1 12.688 22h-1.376A2.31 2.31 0 0 1 9 19.688v-.247l-.002-.003a.15.15 0 0 0-.064-.047.13.13 0 0 0-.07-.01h-.002l-.177.177a2.31 2.31 0 0 1-3.27 0l-.973-.974a2.31 2.31 0 0 1 0-3.269l.177-.177v-.003a.14.14 0 0 0-.01-.07.15.15 0 0 0-.047-.063L4.559 15h-.247A2.31 2.31 0 0 1 2 12.688v-1.376A2.31 2.31 0 0 1 4.312 9h.247l.003-.002a.15.15 0 0 0 .047-.064.14.14 0 0 0 .01-.07v-.002l-.177-.177a2.31 2.31 0 0 1 0-3.27l.974-.973a2.31 2.31 0 0 1 3.269 0l.177.177h.003a.14.14 0 0 0 .07-.01.15.15 0 0 0 .063-.047L9 4.559v-.247A2.31 2.31 0 0 1 11.312 2M11 4.312v.257c0 .893-.59 1.593-1.299 1.887-.716.297-1.622.21-2.248-.418l-.182-.182a.31.31 0 0 0-.441 0l-.974.974a.31.31 0 0 0 0 .44l.182.183c.627.626.715 1.531.418 2.248C6.162 10.41 5.462 11 4.569 11h-.257a.31.31 0 0 0-.312.312v1.376c0 .172.14.312.312.312h.257c.893 0 1.593.59 1.887 1.299.297.716.21 1.622-.418 2.248l-.182.182a.31.31 0 0 0 0 .441l.974.973a.31.31 0 0 0 .44 0l.183-.181c.626-.627 1.532-.715 2.248-.418.709.294 1.299.994 1.299 1.887v.257c0 .172.14.312.312.312h1.376c.172 0 .312-.14.312-.312v-.257c0-.893.59-1.593 1.299-1.887.716-.297 1.622-.21 2.249.418l.181.181c.122.122.32.122.441 0l.973-.973a.31.31 0 0 0 0-.44l-.181-.183c-.627-.626-.715-1.532-.418-2.248.294-.709.994-1.299 1.887-1.299h.257c.172 0 .312-.14.312-.312v-1.376a.31.31 0 0 0-.312-.312h-.257c-.893 0-1.593-.59-1.887-1.299-.297-.717-.21-1.622.418-2.248l.181-.182a.31.31 0 0 0 0-.441l-.973-.974a.31.31 0 0 0-.44 0l-.183.182c-.626.627-1.532.715-2.248.418C13.59 6.162 13 5.462 13 4.569v-.257A.31.31 0 0 0 12.688 4h-1.376a.31.31 0 0 0-.312.312"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            All settings
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </section>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`UserMenu > renders an open menu 1`] = `
<body
  data-scroll-locked="1"
  style="pointer-events: none;"
>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  
  


  <div
    aria-hidden="true"
    data-aria-hidden="true"
  >
    <div
      class="UserMenu-module_wrapper"
    >
      <button
        aria-controls="radix-react-use-id-1"
        aria-expanded="true"
        aria-haspopup="menu"
        aria-label="User menu"
        class="UserMenu-module_triggerButton"
        data-state="open"
        id="radix-react-use-id-2"
        type="button"
      >
        <div
          class="UserMenu-module_avatarWrapper"
        >
          <span
            aria-label="@person-name:homeserver.com"
            class="_avatar_va14e_8"
            data-color="1"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 36px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="36px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/element.png"
              width="36px"
            />
          </span>
        </div>
      </button>
      <span
        class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
      >
        Sally Sanderson with a longer name
      </span>
    </div>
  </div>
  <div
    data-radix-popper-content-wrapper=""
    dir="ltr"
    style="position: fixed; left: 0px; top: 0px; transform: translate(0px, -200%); min-width: max-content; --radix-popper-transform-origin: ; z-index: auto;"
  >
    <div
      aria-label="User menu"
      aria-labelledby="radix-react-use-id-2"
      aria-orientation="vertical"
      class="UserMenu-module_container _menu_1kl3y_8"
      data-align="start"
      data-orientation="vertical"
      data-radix-menu-content=""
      data-side="right"
      data-state="open"
      dir="ltr"
      id="radix-react-use-id-1"
      role="menu"
      style="outline: none; --radix-dropdown-menu-content-transform-origin: var(--radix-popper-transform-origin); --radix-dropdown-menu-content-available-width: var(--radix-popper-available-width); --radix-dropdown-menu-content-available-height: var(--radix-popper-available-height); --radix-dropdown-menu-trigger-width: var(--radix-popper-anchor-width); --radix-dropdown-menu-trigger-height: var(--radix-popper-anchor-height); animation: auto ease 0s 1 normal none running none; pointer-events: auto;"
      tabindex="-1"
    >
      <section
        class="UserMenu-module_profile"
      >
        <span
          aria-label="@person-name:homeserver.com"
          class="_avatar_va14e_8"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 64px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="64px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/element.png"
            width="64px"
          />
        </span>
        <span
          class="_typography_6v6n8_153 _font-body-lg-semibold_6v6n8_74 UserMenu-module_displayname"
        >
          Sally Sanderson with a longer name
        </span>
        <span
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50"
          data-testid="userId"
        >
          @person-name:homeserver.com
        </span>
        <a
          class="_button_1nw83_8 _has-icon_1nw83_60"
          data-kind="tertiary"
          data-size="md"
          href="#"
          role="link"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 3h6a1 1 0 1 1 0 2H5v14h14v-6a1 1 0 1 1 2 0v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2"
            />
            <path
              d="M15 3h5a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0V6.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L17.586 5H15a1 1 0 1 1 0-2"
            />
          </svg>
          Manage account
        </a>
      </section>
      <div
        class="_separator_13qwf_8"
        data-kind="primary"
        data-orientation="horizontal"
        role="separator"
      />
      <section
        class="UserMenu-module_actions"
      >
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.5 20q-.625 0-1.062-.437A1.45 1.45 0 0 1 2 18.5q0-.625.438-1.062A1.45 1.45 0 0 1 3.5 17H4V6q0-.824.588-1.412A1.93 1.93 0 0 1 6 4h14q.424 0 .712.287Q21 4.576 21 5t-.288.713A.97.97 0 0 1 20 6H6v11h4.5q.624 0 1.063.438.437.437.437 1.062t-.437 1.063A1.45 1.45 0 0 1 10.5 20zM15 20a.97.97 0 0 1-.713-.288A.97.97 0 0 1 14 19V9q0-.424.287-.713A.97.97 0 0 1 15 8h6q.424 0 .712.287Q22 8.576 22 9v10q0 .424-.288.712A.97.97 0 0 1 21 20zm1-3h4v-7h-4z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            Link new device
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22q-.824 0-1.412-.587A1.93 1.93 0 0 1 4 20V10q0-.825.588-1.412A1.93 1.93 0 0 1 6 8h1V6q0-2.075 1.463-3.537Q9.926 1 12 1q2.075 0 3.537 1.463Q17 3.925 17 6v2h1q.824 0 1.413.588Q20 9.175 20 10v10q0 .824-.587 1.413A1.93 1.93 0 0 1 18 22zm0-2h12V10H6zM9 8h6V6q0-1.25-.875-2.125A2.9 2.9 0 0 0 12 3q-1.25 0-2.125.875A2.9 2.9 0 0 0 9 6z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            Security & Privacy
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.713 16.713A.97.97 0 0 1 12 17a.97.97 0 0 1-.713-.288A.97.97 0 0 1 11 16q0-.424.287-.713A.97.97 0 0 1 12 15q.424 0 .713.287.287.288.287.713 0 .424-.287.712m0-3.999A.97.97 0 0 1 12 13a.97.97 0 0 1-.713-.287A.97.97 0 0 1 11 12V8q0-.424.287-.713A.97.97 0 0 1 12 7q.424 0 .713.287Q13 7.576 13 8v4q0 .424-.287.713"
            />
            <path
              d="M2.95 16.3a10.2 10.2 0 0 1-.712-2.1A10.2 10.2 0 0 1 2 12q0-2.075.788-3.9a10.1 10.1 0 0 1 2.137-3.175q1.35-1.35 3.175-2.137A9.7 9.7 0 0 1 12 2q2.075 0 3.9.788a10.1 10.1 0 0 1 3.175 2.137q1.35 1.35 2.137 3.175A9.7 9.7 0 0 1 22 12a9.7 9.7 0 0 1-.788 3.9 10.1 10.1 0 0 1-2.137 3.175q-1.35 1.35-3.175 2.137A9.7 9.7 0 0 1 12 22q-1.125 0-2.2-.238a10.2 10.2 0 0 1-2.1-.712L2.75 22.5a.94.94 0 0 1-1-.25.94.94 0 0 1-.25-1zm4.2 2.8a1 1 0 0 1 .275-.062q.15-.013.275-.013.225 0 .438.038.212.036.412.137a7.4 7.4 0 0 0 1.675.6Q11.1 20 12 20q3.35 0 5.675-2.325T20 12t-2.325-5.675T12 4 6.325 6.325 4 12q0 .9.2 1.775t.6 1.675q.176.325.188.688t-.088.712l-.95 3.2z"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            Feedback
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
        <button
          class="_item_bym9p_8 _interactive_bym9p_26"
          data-kind="primary"
          data-orientation="vertical"
          data-radix-collection-item=""
          role="menuitem"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            class="_icon_bym9p_51"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 12a4 4 0 1 1-8 0 4 4 0 0 1 8 0m-2 0a2 2 0 1 0-4 0 2 2 0 0 0 4 0"
            />
            <path
              d="M11.312 2h1.376A2.31 2.31 0 0 1 15 4.312v.247l.002.003c.01.014.031.033.064.047.03.013.056.013.07.01h.002l.177-.177a2.31 2.31 0 0 1 3.27 0l.973.974a2.31 2.31 0 0 1 0 3.269l-.177.177v.003a.13.13 0 0 0 .01.07.15.15 0 0 0 .047.063l.003.002h.247A2.31 2.31 0 0 1 22 11.312v1.376A2.31 2.31 0 0 1 19.688 15h-.247l-.003.002a.15.15 0 0 0-.047.064.13.13 0 0 0-.01.07v.002l.177.177a2.31 2.31 0 0 1 0 3.27l-.974.973a2.31 2.31 0 0 1-3.269 0l-.177-.177h-.003a.13.13 0 0 0-.07.01.15.15 0 0 0-.063.047l-.002.003v.247A2.31 2.31 0 0 1 12.688 22h-1.376A2.31 2.31 0 0 1 9 19.688v-.247l-.002-.003a.15.15 0 0 0-.064-.047.13.13 0 0 0-.07-.01h-.002l-.177.177a2.31 2.31 0 0 1-3.27 0l-.973-.974a2.31 2.31 0 0 1 0-3.269l.177-.177v-.003a.14.14 0 0 0-.01-.07.15.15 0 0 0-.047-.063L4.559 15h-.247A2.31 2.31 0 0 1 2 12.688v-1.376A2.31 2.31 0 0 1 4.312 9h.247l.003-.002a.15.15 0 0 0 .047-.064.14.14 0 0 0 .01-.07v-.002l-.177-.177a2.31 2.31 0 0 1 0-3.27l.974-.973a2.31 2.31 0 0 1 3.269 0l.177.177h.003a.14.14 0 0 0 .07-.01.15.15 0 0 0 .063-.047L9 4.559v-.247A2.31 2.31 0 0 1 11.312 2M11 4.312v.257c0 .893-.59 1.593-1.299 1.887-.716.297-1.622.21-2.248-.418l-.182-.182a.31.31 0 0 0-.441 0l-.974.974a.31.31 0 0 0 0 .44l.182.183c.627.626.715 1.531.418 2.248C6.162 10.41 5.462 11 4.569 11h-.257a.31.31 0 0 0-.312.312v1.376c0 .172.14.312.312.312h.257c.893 0 1.593.59 1.887 1.299.297.716.21 1.622-.418 2.248l-.182.182a.31.31 0 0 0 0 .441l.974.973a.31.31 0 0 0 .44 0l.183-.181c.626-.627 1.532-.715 2.248-.418.709.294 1.299.994 1.299 1.887v.257c0 .172.14.312.312.312h1.376c.172 0 .312-.14.312-.312v-.257c0-.893.59-1.593 1.299-1.887.716-.297 1.622-.21 2.249.418l.181.181c.122.122.32.122.441 0l.973-.973a.31.31 0 0 0 0-.44l-.181-.183c-.627-.626-.715-1.532-.418-2.248.294-.709.994-1.299 1.887-1.299h.257c.172 0 .312-.14.312-.312v-1.376a.31.31 0 0 0-.312-.312h-.257c-.893 0-1.593-.59-1.887-1.299-.297-.717-.21-1.622.418-2.248l.181-.182a.31.31 0 0 0 0-.441l-.973-.974a.31.31 0 0 0-.44 0l-.183.182c-.626.627-1.532.715-2.248.418C13.59 6.162 13 5.462 13 4.569v-.257A.31.31 0 0 0 12.688 4h-1.376a.31.31 0 0 0-.312.312"
            />
          </svg>
          <span
            class="_typography_6v6n8_153 _font-body-md-medium_6v6n8_60 _label_bym9p_35"
          >
            All settings
          </span>
          <svg
            aria-hidden="true"
            class="_nav-hint_bym9p_60"
            fill="currentColor"
            height="24"
            viewBox="8 0 8 24"
            width="8"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8.7 17.3a.95.95 0 0 1-.275-.7q0-.425.275-.7l3.9-3.9-3.9-3.9a.95.95 0 0 1-.275-.7q0-.425.275-.7a.95.95 0 0 1 .7-.275q.425 0 .7.275l4.6 4.6q.15.15.213.325.062.175.062.375t-.062.375a.9.9 0 0 1-.213.325l-4.6 4.6a.95.95 0 0 1-.7.275.95.95 0 0 1-.7-.275"
            />
          </svg>
        </button>
      </section>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-aria-hidden="true"
    data-radix-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`UserMenu > renders an open menu with user status 1`] = `
<div
  aria-hidden="true"
  data-aria-hidden="true"
>
  <div
    class="UserMenu-module_wrapper"
  >
    <button
      aria-controls="radix-react-use-id-1"
      aria-expanded="true"
      aria-haspopup="menu"
      aria-label="User menu"
      class="UserMenu-module_triggerButton"
      data-state="open"
      id="radix-react-use-id-2"
      type="button"
    >
      <div
        class="UserMenu-module_avatarWrapper"
      >
        <span
          aria-label="@person-name:homeserver.com"
          class="_avatar_va14e_8"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 36px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="36px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/element.png"
            width="36px"
          />
        </span>
        <div
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 UserMenu-module_iconStatusEmoji"
        >
          🐹
        </div>
      </div>
    </button>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
    >
      Sally Sanderson
    </span>
  </div>
</div>
`;

exports[`UserMenu > renders condensed view 1`] = `
<div>
  <div
    class="UserMenu-module_wrapper"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="UserMenu-module_triggerButton"
      data-state="closed"
      id="radix-react-use-id-1"
      type="button"
    >
      <div
        class="UserMenu-module_avatarWrapper"
      >
        <span
          aria-label="@person-name:homeserver.com"
          class="_avatar_va14e_8"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 36px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="36px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/element.png"
            width="36px"
          />
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`UserMenu > renders the status emoji when set 1`] = `
<div>
  <div
    class="UserMenu-module_wrapper"
  >
    <button
      aria-expanded="false"
      aria-haspopup="menu"
      aria-label="User menu"
      class="UserMenu-module_triggerButton"
      data-state="closed"
      id="radix-react-use-id-1"
      type="button"
    >
      <div
        class="UserMenu-module_avatarWrapper"
      >
        <span
          aria-label="@person-name:homeserver.com"
          class="_avatar_va14e_8"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 36px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="36px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/element.png"
            width="36px"
          />
        </span>
        <div
          class="_typography_6v6n8_153 _font-body-md-regular_6v6n8_50 UserMenu-module_iconStatusEmoji"
        >
          🐹
        </div>
      </div>
    </button>
    <span
      class="_typography_6v6n8_153 _font-heading-sm-semibold_6v6n8_93 UserMenu-module_displayName"
    >
      Sally Sanderson
    </span>
  </div>
</div>
`;
